Fix genpackage ilm_policy name for rollup indices

--- a/apmpackage/apm/data_stream/service_summary_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/service_summary_interval_metrics/manifest.yml
@@ -1,7 +1,7 @@
 title: APM service summary metrics {{ .Interval }}
 type: metrics
 dataset: apm.service_summary.{{ .Interval }}
-ilm_policy: metrics-apm.service_summary_interval_metrics-default_policy.{{ .Interval }}
+ilm_policy: metrics-apm.service_summary_{{ .Interval }}_metrics-default_policy.{{ .Interval }}
 elasticsearch:
   index_template:
     mappings:
