--- a/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
@@ -1,7 +1,7 @@
 title: APM service transaction metrics {{ .Interval }}
 type: metrics
 dataset: apm.service_transaction.{{ .Interval }}
-ilm_policy: metrics-apm.service_transaction_interval_metrics-default_policy.{{ .Interval }}
+ilm_policy: metrics-apm.service_transaction_{{ .Interval }}_metrics-default_policy.{{ .Interval }}
 elasticsearch:
   index_template:
     mappings:
