--- a/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
@@ -1,7 +1,7 @@
 title: APM transaction metrics {{ .Interval }}
 type: metrics
 dataset: apm.transaction.{{ .Interval }}
-ilm_policy: metrics-apm.transaction_interval_metrics-default_policy.{{ .Interval }}
+ilm_policy: metrics-apm.transaction_{{ .Interval }}_metrics-default_policy.{{ .Interval }}
 elasticsearch:
   index_template:
     mappings:
