--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -17,6 +17,9 @@
     - description: Add `host` and `service.version` to span events
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10697
+    - description: Fix ILM policy name mismatch in rollup index templates
+      type: bugfix
+      link: https://github.com/elastic/apm-server/pull/10824
 - version: "8.7.1"
   changes:
     - description: Add missing `agent.activation_method` mapping to `logs-apm.app`, `metrics-apm.app`, `logs-apm.error` and `metrics-apm.internal`
