--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
@@ -16,6 +16,10 @@
 - name: service.target.type
   type: keyword
   description: Type of the target service for which data is collected
+- name: service.language.name
+  type: keyword
+  description: |
+    Name of the programming language used.
 - name: service_destination.aggregation.overflow_count
   type: long
   description: Number of aggregation groups that overflowed for service destination metrics aggregation.
