add missing docker image vars

--- a/testing/benchmark/Makefile
+++ b/testing/benchmark/Makefile
@@ -122,7 +122,9 @@ IMAGE_TAG?=$(shell grep docker.elastic.co/kibana ${REPO_ROOT}/docker-compose.yml
 # The timestamp must be included to force images to be pulled.
 USER_NAME?=${USER}
 CUSTOM_IMAGE_TAG:=${IMAGE_TAG}-${USER_NAME}-$(shell date +%s)
+ELASTIC_AGENT_DOCKER_IMAGE?=docker.elastic.co/cloud-release/elastic-agent-cloud
 ELASTICSEARCH_DOCKER_IMAGE=docker.elastic.co/cloud-release/elasticsearch-cloud-ess
+KIBANA_DOCKER_IMAGE=docker.elastic.co/cloud-release/kibana-cloud
 CI_KIBANA_DOCKER_IMAGE=docker.elastic.co/observability-ci/kibana
 CI_ELASTIC_AGENT_DOCKER_IMAGE=docker.elastic.co/observability-ci/elastic-agent
 
