--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -12,6 +12,9 @@
     - description: Add `service.language.name` to service destination metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10881
+    - description: Use "dynamic runtime" instead of strict mapping for internal, TBS, and aggregation indices
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10968
 - version: "8.8.0"
   changes:
     - description: Store app logs into service-specific data streams
