--- a/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
@@ -5,9 +5,9 @@ ilm_policy: metrics-apm.service_transaction_{{ .Interval }}_metrics-default_poli
 elasticsearch:
   index_template:
     mappings:
-      # Internal metrics should have all fields strictly mapped;
-      # we are in full control of the field names.
-      dynamic: strict
+      # We are in full control of the field names,
+      # but do not block ingestion on unexpected fields.
+      dynamic: runtime
       # Individual measurements are typically uninteresting, so
       # use synthetic source to reduce storage size.
       _source:
