Remove timeseries.instance in ingest pipeline for pre-8.6 compatibility
In apmpackage, remove timeseries.instance in ingest pipeline so that
pre-8.6 apm-server will stop getting ingest error due to strict mapping.

--- a/apmpackage/apm/data_stream/internal_metrics/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/elasticsearch/ingest_pipeline/default.yml
@@ -14,8 +14,8 @@ processors:
   - pipeline:
       name: client_geoip
   - remove:
-      # Removed in 8.6.0
-      field: timeseries.instance
+      # timeseries.instance removed in 8.6.0
+      field: timeseries
       ignore_missing: true
   - pipeline:
       name: set_metrics
