--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -12,7 +12,7 @@
     - description: Add `service.language.name` to service destination metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10881
-    - description: Remove `timeseries.instance` field
+    - description: Remove `timeseries.instance` in ingest pipeline for pre-8.6 compatibility
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10973
 - version: "8.8.0"
