Remove `timeseries.instance` in ingest pipeline for pre-8.6 compatibility (#10973)
In apmpackage, remove timeseries.instance in ingest pipeline so that
pre-8.6 apm-server will stop getting ingest error due to strict mapping.

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -12,6 +12,9 @@
     - description: Add `service.language.name` to service destination metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10881
+    - description: Remove `timeseries.instance` in ingest pipeline for pre-8.6 compatibility
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10973
 - version: "8.8.0"
   changes:
     - description: Store app logs into service-specific data streams
