Use "dynamic: runtime" instead of strict mapping for internal, TBS, and aggregation indices (#10968)
Use "dynamic: runtime" instead of strict mapping for internal, TBS, and aggregation indices. Avoid blocking ingestion on unexpected fields.

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -15,6 +15,9 @@
     - description: Remove `timeseries.instance` in ingest pipeline for pre-8.6 compatibility
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10973
+    - description: Use "dynamic runtime" instead of strict mapping for internal, TBS, and aggregation indices
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10968
 - version: "8.8.0"
   changes:
     - description: Store app logs into service-specific data streams
