--- a/testing/benchmark/Makefile
+++ b/testing/benchmark/Makefile
@@ -59,7 +59,7 @@ terraform.tfvars:
 
 .PHONY: apmbench
 apmbench:
-	@echo "-> Building apmbench..."; exit 1
+	@echo "-> Building apmbench..."
 	@cd $(APMBENCH_PATH) && CGO_ENABLED=0 GOOS=$(APMBENCH_GOOS) GOARCH=$(APMBENCH_GOARCH) $(GO) build .
 
 .PHONY: init
