--- a/systemtest/approvals/TestJaeger/batch_0.approved.json
+++ b/systemtest/approvals/TestJaeger/batch_0.approved.json
@@ -249,6 +249,9 @@
             },
             "trace": {
                 "id": "00000000000000007be2fd98d0973be3"
+            },
+            "transaction": {
+                "id": "7be2fd98d0973be3"
             }
         },
         {
@@ -297,6 +300,9 @@
             },
             "trace": {
                 "id": "00000000000000007be2fd98d0973be3"
+            },
+            "transaction": {
+                "id": "7be2fd98d0973be3"
             }
         },
         {
@@ -345,6 +351,9 @@
             },
             "trace": {
                 "id": "00000000000000007be2fd98d0973be3"
+            },
+            "transaction": {
+                "id": "7be2fd98d0973be3"
             }
         },
         {
