--- a/systemtest/approvals/TestJaeger/batch_1.approved.json
+++ b/systemtest/approvals/TestJaeger/batch_1.approved.json
@@ -241,6 +241,9 @@
                     "name": "host01"
                 }
             },
+            "span": {
+                "id": "6e09e8bcefd6b828"
+            },
             "trace": {
                 "id": "00000000000000007be2fd98d0973be3"
             }
