--- a/systemtest/approvals/TestOTLPGRPCTraces.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCTraces.approved.json
@@ -132,6 +132,9 @@
             },
             "trace": {
                 "id": "d2acbef8b37655e48548fd9d61ad6114"
+            },
+            "transaction": {
+                "id": "b3ee9be3b687a611"
             }
         },
         {
