--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: ci
 
 on:
+  push:
+    branches:
+      - 7.1*
   pull_request:
 
 # limit the access of the generated GITHUB_TOKEN
@@ -8,11 +11,50 @@ permissions:
   contents: read
 
 jobs:
-  system-test:
-    runs-on: ubuntu-latest
-    steps:
-      - run: 'echo "No tests required to run"'
   lint:
     runs-on: ubuntu-latest
     steps:
-      - run: 'echo "No lint required to run"'
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: .go-version
+          cache: true
+          cache-dependency-path: |
+            go.sum
+            tools/go.sum
+            systemtest/go.sum
+      - run: make check-full
+
+  test:
+    strategy:
+      matrix:
+        os: ['macos-latest', 'windows-latest', 'ubuntu-latest']
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: .go-version
+          cache: true
+      - run: go test -v ./...
+
+  python-system-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: .go-version
+          cache: true
+      - run: make update apm-server docker-system-tests
+
+  go-system-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: .go-version
+          cache: true
+      - run: make apm-server
+      - run: cd systemtest && go test -v -timeout=20m ./...
