build: manually bump version to 8.10.0

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -259,3 +259,17 @@ pull_request_rules:
         labels:
           - "backport"
         title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})"
+  - name: backport patches to 8.9 branch
+    conditions:
+      - merged
+      - base=main
+      - label=backport-8.9
+    actions:
+      backport:
+        assignees:
+          - "{{ author }}"
+        branches:
+          - "8.9"
+        labels:
+          - "backport"
+        title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})"
