--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -3,6 +3,8 @@
     - description: Placeholder
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/123
+- version: "8.9.0"
+  changes:
     - description: Handle `metricset.samples` from apm-server
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10794
