Migrate nightly benchmarks test to github actions

--- a/testing/benchmark/Makefile
+++ b/testing/benchmark/Makefile
@@ -20,7 +20,7 @@ GOBENCH_HOST ?= http://localhost:9200
 GOBENCH_DEFAULT_TAGS = apm_server_version=$(APM_SERVER_VERSION)
 
 SSH_USER ?= ec2-user
-SSH_OPTS ?= -o LogLevel=ERROR -o StrictHostKeyChecking=no
+SSH_OPTS ?= -o LogLevel=ERROR -o StrictHostKeyChecking=no -o ServerAliveInterval=60 -o ServerAliveCountMax=10
 SSH_KEY ?= ~/.ssh/id_rsa_terraform
 WORKER_IP = $(shell terraform output -raw public_ip)
 
@@ -28,7 +28,12 @@ SHELL = /bin/bash
 .SHELLFLAGS = -o pipefail -c
 
 # This profile will also be used by the Terraform provider.
-export AWS_PROFILE ?= default
+
+# export AWS_PROFILE if CI is not defined
+ifeq ($(CI),)
+	export AWS_PROFILE ?= default
+endif
+
 
 .default: all
 
