--- a/systemtest/approvals/TestIntake/UnknownSpanType.approved.json
+++ b/systemtest/approvals/TestIntake/UnknownSpanType.approved.json
@@ -6,6 +6,9 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
+            "container": {
+                "id": "container-id"
+            },
             "data_stream.dataset": "apm",
             "data_stream.namespace": "default",
             "data_stream.type": "traces",
@@ -32,6 +35,13 @@
                     "status_code": 200
                 }
             },
+            "kubernetes": {
+                "namespace": "namespace1",
+                "pod": {
+                    "name": "pod-name",
+                    "uid": "pod-uid"
+                }
+            },
             "labels": {
                 "span_tag": "something"
             },
@@ -43,13 +53,39 @@
             "parent": {
                 "id": "945254c567a5417e"
             },
+            "process": {
+                "args": [
+                    "node",
+                    "server.js"
+                ],
+                "parent": {
+                    "pid": 6789
+                },
+                "pid": 1234,
+                "title": "node"
+            },
             "processor": {
                 "event": "span",
                 "name": "transaction"
             },
             "service": {
                 "environment": "staging",
+                "framework": {
+                    "name": "Express",
+                    "version": "1.2.3"
+                },
+                "language": {
+                    "name": "ecmascript",
+                    "version": "8"
+                },
                 "name": "1234_service-12a3",
+                "node": {
+                    "name": "container-id"
+                },
+                "runtime": {
+                    "name": "node",
+                    "version": "8.0.0"
+                },
                 "version": "5.1.3"
             },
             "span": {
@@ -117,6 +153,11 @@
             },
             "url": {
                 "original": "http://localhost:8000"
+            },
+            "user": {
+                "email": "foo@bar.com",
+                "id": "123user",
+                "name": "foo"
             }
         },
         {
