Add 7.17.11 apmpackage changelog

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -3,9 +3,9 @@
 # change type can be one of: enhancement, bugfix, breaking-change
 - version: "7.17.11"
   changes:
-    - description: Placeholder
+    - description: fixed the `sampled_traces` data stream's ILM policy name
       type: bugfix
-      link: https://github.com/elastic/apm-server/pull/1234
+      link: https://github.com/elastic/apm-server/pull/10937
 - version: "7.17.6"
   changes:
     - description: Support TLSv1.3 and remove TLSv1.0 in the default TLS supported protocols
