--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -1,6 +1,11 @@
 # newer versions go on top
 #
 # change type can be one of: enhancement, bugfix, breaking-change
+- version: "7.17.12"
+  changes:
+    - description: Placeholder
+      type: bugfix
+      link: https://github.com/elastic/apm-server/pull/1234
 - version: "7.17.11"
   changes:
     - description: fixed the `sampled_traces` data stream's ILM policy name
