--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -138,7 +138,7 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@v1.24.0
         with:
-          channel-id: "#apm-sever"
+          channel-id: "#apm-server"
           payload: |
             {
             	"blocks": [
