--- a/apmpackage/apm/data_stream/app_logs/manifest.yml
+++ b/apmpackage/apm/data_stream/app_logs/manifest.yml
@@ -4,6 +4,9 @@ dataset: apm.app
 dataset_is_prefix: true
 ilm_policy: logs-apm.app_logs-default_policy
 elasticsearch:
+  # Ensures agents have permissions to write data to `logs-*-*`
+  dynamic_dataset: true
+  dynamic_namespace: true
   index_template:
     mappings:
       # TODO(axw) investigate setting `dynamic: runtime`, so that fields are
