--- a/apmpackage/apm/data_stream/app_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/app_metrics/manifest.yml
@@ -4,6 +4,9 @@ dataset: apm.app
 dataset_is_prefix: true
 ilm_policy: metrics-apm.app_metrics-default_policy
 elasticsearch:
+  # Ensures agents have permissions to write data to `logs-*-*`
+  dynamic_dataset: true
+  dynamic_namespace: true
   index_template:
     mappings:
       # Application metrics must be dynamically mapped,
