--- a/apmpackage/apm/data_stream/internal_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/manifest.yml
@@ -3,6 +3,7 @@ type: metrics
 dataset: apm.internal
 ilm_policy: metrics-apm.internal_metrics-default_policy
 elasticsearch:
+  dynamic_namespace: true
   index_template:
     mappings:
       # We are in full control of the field names,
