--- a/apmpackage/apm/data_stream/rum_traces/manifest.yml
+++ b/apmpackage/apm/data_stream/rum_traces/manifest.yml
@@ -3,6 +3,7 @@ type: traces
 dataset: apm.rum
 ilm_policy: traces-apm.rum_traces-default_policy
 elasticsearch:
+  dynamic_namespace: true
   index_template:
     mappings:
       # TODO(axw) investigate setting `dynamic: runtime`, so that fields are
