--- a/systemtest/approvals/TestOTLPGRPCMetrics_histogram.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCMetrics_histogram.approved.json
@@ -3,49 +3,8 @@
         {
             "@timestamp": "dynamic",
             "agent": {
-                "name": "otlp",
-                "version": "unknown"
-            },
-            "data_stream": {
-                "dataset": "apm.app.unknown",
-                "namespace": "default",
-                "type": "metrics"
-            },
-            "ecs": {
-                "version": "dynamic"
-            },
-            "event": {
-                "agent_id_status": "missing",
-                "ingested": "dynamic"
-            },
-            "metricset": {
-                "name": "app"
-            },
-            "observer": {
-                "hostname": "dynamic",
-                "type": "apm-server",
-                "version": "dynamic"
-            },
-            "processor": {
-                "event": "metric",
-                "name": "metric"
-            },
-            "service": {
-                "language": {
-                    "name": "unknown"
-                },
-                "name": "unknown"
-            },
-            "summary": {
-                "sum": 123.456,
-                "value_count": 10
-            }
-        },
-        {
-            "@timestamp": "dynamic",
-            "agent": {
                 "name": "opentelemetry/go",
-                "version": "1.8.0"
+                "version": "1.16.0"
             },
             "data_stream": {
                 "dataset": "apm.app.unknown_service_systemtest_test",
@@ -59,8 +18,7 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "float64_counter": 1,
-            "int64_histogram": {
+            "histogram": {
                 "counts": [
                     1,
                     1,
@@ -68,7 +26,7 @@
                     1
                 ],
                 "values": [
-                    50.5,
+                    0.5,
                     550,
                     5500,
                     10000
