systemtest: Remove loadgen, use elastic/apm-perf
Removes `systemtest/loadgen` since a more recent version exists in the
`elastic/apm-perf` repository.

Also caused a systemtest output to be updated since the systemtest were
using the APM Go Agent v1.

Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
+++ b/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
@@ -33,7 +33,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "elasticsearch"
+                }
             },
             "span": {
                 "destination": {
@@ -82,7 +85,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "elasticsearch"
+                }
             },
             "span": {
                 "destination": {
@@ -131,7 +137,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "elasticsearch"
+                }
             },
             "span": {
                 "destination": {
@@ -180,7 +189,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "redis"
+                }
             },
             "span": {
                 "destination": {
@@ -229,7 +241,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "redis"
+                }
             },
             "span": {
                 "destination": {
@@ -278,7 +293,10 @@
                 "name": "metric"
             },
             "service": {
-                "name": "systemtest"
+                "name": "systemtest",
+                "target": {
+                    "type": "redis"
+                }
             },
             "span": {
                 "destination": {
