--- a/apmpackage/apm/data_stream/rum_traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/rum_traces/elasticsearch/ingest_pipeline/default.yml
@@ -11,6 +11,14 @@ processors:
       name: user_agent
   - pipeline:
       name: client_geoip
+  - set:
+      if: ctx.transaction?.type != null
+      field: processor.event
+      value: transaction
+  - set:
+      if: ctx.span?.type != null
+      field: processor.event
+      value: span
   - pipeline:
       name: event_duration
   - remove:
