--- a/apmpackage/apm/data_stream/app_logs/fields/fields.yml
+++ b/apmpackage/apm/data_stream/app_logs/fields/fields.yml
@@ -33,9 +33,11 @@
     Kubernetes Pod UID
 - name: processor.event
   type: constant_keyword
+  value: log
   description: Processor event.
 - name: processor.name
   type: constant_keyword
+  value: log
   description: Processor name.
 - name: service.framework.name
   type: keyword
