--- a/apmpackage/apm/data_stream/error_logs/fields/fields.yml
+++ b/apmpackage/apm/data_stream/error_logs/fields/fields.yml
@@ -100,9 +100,11 @@
     The ID of the parent event.
 - name: processor.event
   type: constant_keyword
+  value: error
   description: Processor event.
 - name: processor.name
   type: constant_keyword
+  value: error
   description: Processor name.
 - name: service.framework.name
   type: keyword
