--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -3,6 +3,12 @@
     - description: Placeholder
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/123
+    - description: Add permissions to reroute to dedicated datasets for logs, metrics and traces
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/11168
+    - description: Add permissions to reroute to dedicated namespaces for every data stream.
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/11168
 - version: "8.9.0"
   changes:
     - description: Handle `metricset.samples` from apm-server
