--- a/apmpackage/apm/data_stream/traces/manifest.yml
+++ b/apmpackage/apm/data_stream/traces/manifest.yml
@@ -3,6 +3,9 @@ type: traces
 dataset: apm
 ilm_policy: traces-apm.traces-default_policy
 elasticsearch:
+  # Ensures agents have permissions to write data to `traces-*-*`
+  dynamic_dataset: true
+  dynamic_namespace: true
   index_template:
     mappings:
       # TODO(axw) investigate setting `dynamic: runtime`, so that fields are
