Set processor.* fields in mappings and ingest (#11202)
We're still setting them in code too, until the
integration package is updated in Kibana.

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -1,14 +1,14 @@
 - version: generated
   changes:
-    - description: Placeholder
-      type: enhancement
-      link: https://github.com/elastic/apm-server/pull/123
     - description: Add permissions to reroute to dedicated datasets for logs, metrics and traces
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/11168
     - description: Add permissions to reroute to dedicated namespaces for every data stream.
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/11168
+    - description: set processor.* fields in mappings and ingest pipeline
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/11202
 - version: "8.9.0"
   changes:
     - description: Handle `metricset.samples` from apm-server
