--- a/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
@@ -35,3 +35,21 @@ processors:
       value: 0
       ignore_failure: true
   # end of event.success_count logic
+  - script:
+      lang: painless
+      source: |
+        def representative_count = ctx?.span?.representative_count != null ? ctx?.span?.representative_count : ctx?.transaction?.representative_count;
+          
+        if(representative_count == null) {
+        return;
+        }
+        
+        int doc_count = (int)representative_count;
+        
+        double decimal = representative_count - doc_count;
+        
+        if (decimal > Math.random()) {
+        doc_count += 1;
+        }
+        
+        ctx._doc_count = doc_count;
