Add system-test job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,15 @@ jobs:
           cache: true
       - run: make apm-server
       - run: cd systemtest && go test -v -timeout=20m ./...
+
+  system-test:
+    runs-on: ubuntu-latest
+    needs:
+      - python-system-tests
+      - go-system-tests
+    steps:
+      - id: check
+        uses: elastic/apm-pipeline-library/.github/actions/check-dependent-jobs@current
+        with:
+          needs: ${{ toJSON(needs) }}
+      - run: ${{ steps.check.outputs.isSuccess }}
