fix systemtest session approval

--- a/systemtest/approvals/TestOTLPGRPCLogs.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCLogs.approved.json
@@ -39,6 +39,9 @@
                 },
                 "name": "unknown"
             },
+            "session": {
+              "id": ""
+            },
             "span": {
                 "id": "0200000000000000"
             },
