test: enable pprof and expvar in tilt config

--- a/testing/infra/k8s/base/stack/apm-server.yaml
+++ b/testing/infra/k8s/base/stack/apm-server.yaml
@@ -10,6 +10,11 @@ spec:
       selfSignedCertificate:
         disabled: true
   config:
+    apm-server:
+      pprof:
+        enabled: true
+      expvar:
+        enabled: true
     logging:
       level: debug
     output:
