systemtest: Add service.language.name to service destination aggregation

--- a/systemtest/approvals/TestServiceDestinationAggregation.approved.json
+++ b/systemtest/approvals/TestServiceDestinationAggregation.approved.json
@@ -38,6 +38,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest",
                 "target": {
                     "type": "resource"
@@ -96,6 +99,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest",
                 "target": {
                     "type": "resource"
@@ -154,6 +160,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest",
                 "target": {
                     "type": "resource"
